--- a/frontend/src/app/core/layout/header/header.component.html
+++ b/frontend/src/app/core/layout/header/header.component.html
@@ -10,6 +10,21 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarMain">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/professor-list']">
+            <i class="bi bi-people me-1"></i>
+            Professores
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/cadeiras']">
+            <i class="bi bi-book me-1"></i>
+            Cadeiras
+          </a>
+        </li>
+      </ul>
+      
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <ng-container *ngIf="!currentUser">
           <li class="nav-item">
